app/deployment 1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appli-ku-deploying 
  labels:
    app: appli-ku 
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: appli-ku 
  template:
    metadata:
      labels:
        app: appli-ku #nginx-1
    spec:
      containers:
      - name: env-tomcat #nginx-2
        image: gcr.io/devops-274919/tomcat
        #ports:
        #- containerPort: 8080
      - name: server #nginx-1
        image: eu.gcr.io/juice-shop-project/nginx:v1
        ports:
        - containerPort: 80
