app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment 
  labels:
    app: server 
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: server 
  template:
    metadata:
      labels:
        app: server #nginx-1
    spec:
      containers:
      - name: env-tomcat #nginx-2
        image: eu.gcr.io/devops-p/docker
        ports:
        - containerPort: 8080
      - name: server #nginx-1
        image: eu.gcr.io/juice-shop-project/nginx:v1
        ports:
        - containerPort: 80
