app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appli-ku-svc-lb  
  labels:
    server: nginx
spec:
  type: LoadBalancer
  loadBalancerIP: ""
  selector:
    app: appli-ku
  ports:
   # - protocol: TCP
    #  name: http
     # port: 80  
     # targetPort: 80
    - protocol: TCP
      port: 8090  
      targetPort: 80
    - protocol: TCP
     # name: https
      port: 443
      targetPort: 443
